style: prevent body overflow by setting overflow to hidden

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -40,6 +40,7 @@
 
 body {
   background: transparent;
+  overflow: hidden;
 }
 
 .range-slider::-webkit-slider-thumb {
